--- a/Example/RRPager/Main.storyboard
+++ b/Example/RRPager/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TQU-ld-ZFw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="whP-gf-Uak">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Subclass-->
+        <!--View Controller-->
         <scene sceneID="wQg-tq-qST">
             <objects>
                 <viewController id="whP-gf-Uak" customClass="RRViewController" sceneMemberID="viewController">
@@ -23,11 +23,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Subclass" id="dHf-5d-84F"/>
+                    <navigationItem key="navigationItem" id="7gd-0g-zhB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1244" y="432.23388305847078"/>
+            <point key="canvasLocation" x="2183.1999999999998" y="432.23388305847078"/>
         </scene>
         <!--Subview-->
         <scene sceneID="anJ-hZ-Ake">
@@ -96,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pGQ-s8-DXY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2193" y="837"/>
+            <point key="canvasLocation" x="3132" y="836.13193403298362"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="J8v-85-DAY">
@@ -104,17 +104,37 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="TQU-ld-ZFw" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="1eW-jq-h7I">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="whP-gf-Uak" kind="relationship" relationship="viewControllers" id="FAT-fs-EQw"/>
+                        <segue destination="l5m-ok-X2e" kind="relationship" relationship="viewControllers" id="FAT-fs-EQw"/>
                         <segue destination="4gJ-r7-iWG" kind="relationship" relationship="viewControllers" id="LgT-1P-Ypr"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g65-Hr-a9D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="304.80000000000001" y="797.45127436281871"/>
+        </scene>
+        <!--Subclass-->
+        <scene sceneID="bBB-HA-02q">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="l5m-ok-X2e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Subclass" id="dHf-5d-84F"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FCT-ho-9kU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="whP-gf-Uak" kind="relationship" relationship="rootViewController" id="IDe-69-dlv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ToI-5M-XUt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1244" y="432.23388305847078"/>
         </scene>
     </scenes>
 </document>
