--- a/Example/RRPager/Main.storyboard
+++ b/Example/RRPager/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Subclassed View Controller-->
         <scene sceneID="wQg-tq-qST">
             <objects>
-                <viewController id="whP-gf-Uak" customClass="RRViewController" sceneMemberID="viewController">
+                <viewController id="whP-gf-Uak" customClass="RRSubclassedViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uEw-UM-LJ8"/>
                         <viewControllerLayoutGuide type="bottom" id="Mvr-aV-6Um"/>
@@ -32,7 +32,7 @@
         <!--Subview-->
         <scene sceneID="anJ-hZ-Ake">
             <objects>
-                <viewController id="4gJ-r7-iWG" customClass="RRMainViewController" sceneMemberID="viewController">
+                <viewController id="4gJ-r7-iWG" customClass="RRSubViewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zny-TI-kp1"/>
                         <viewControllerLayoutGuide type="bottom" id="tzp-Og-b1P"/>
